Fixed abbreviation countries to seed Brazillian cities + Added some filters to the Professional Management page